Actualizar archivos readme

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:eDgSnXyTVpw+6045u7/kpwUyfb7aRK2b1CGR/0nXAnU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,9 +22,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=my_app
+DB_DATABASE=enrollment
 DB_USERNAME=root
 DB_PASSWORD=
 
